// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Position above 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "0px",
        "position": "absolute",
        "top": "-12px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position below 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "0px",
        "position": "absolute",
        "top": "12px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position leftOf 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "-12px",
        "position": "absolute",
        "top": "0px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position rightOf 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "12px",
        "position": "absolute",
        "top": "0px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position styleAbove 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "0px",
        "position": "absolute",
        "top": "-12px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position styleBelow 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "0px",
        "position": "absolute",
        "top": "12px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position styleLeftOf 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "-12px",
        "position": "absolute",
        "top": "0px",
      }
    }
  >
    The tip
  </div>
</div>
`;

exports[`Storyshots Position styleRightOf 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "4px dashed #e80a89",
        "color": "#e80a89",
        "display": "flex",
        "fontSize": "18px",
        "fontWeight": 700,
        "height": "200px",
        "justifyContent": "center",
        "width": "200px",
      }
    }
  >
    Below
  </div>
  <div
    data-css-1luw3o6=""
    style={
      Object {
        "left": "12px",
        "position": "absolute",
        "top": "0px",
      }
    }
  >
    The tip
  </div>
</div>
`;
